@@ -106,6 +106,9 @@ PIG-1309: Map-side Cogroup (ashutoshc)
 
 BUG FIXES
 
+PIG-1489: Pig MapReduceLauncher does not use jars in register statement
+(rding)
+
 PIG-1435: make sure dependent jobs fail when a jon in multiquery fails (niraj
 via rding)
 
